--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,1 @@
-<h1>{{ appTitle }}</h1>
-
-<button (click)="changeTitleHandler()">сменить обложку</button>
-<hr />
-<h2>{{ text }}</h2>
-<input type="text" (keyup.enter)="changeTextHandler($event)" />
+<inst-parent></inst-parent>
