--- a/src/app/parent/parent/child/child.component.html
+++ b/src/app/parent/parent/child/child.component.html
@@ -1,6 +1,4 @@
 <div>
-  <h2>
-    Child {{ name }} {{ surnameProps }} from {{ address?.city }} {{ address?.street }}
-    {{ address?.house }}
-  </h2>
+  Child
+  <button (click)="sendGradeHandler()">matn</button>
 </div>
