--- a/src/app/parent/parent/child/child.component.html
+++ b/src/app/parent/parent/child/child.component.html
@@ -1,4 +1,5 @@
 <div>
   Child
-  <button (click)="sendGradeHandler()">matn</button>
+  <input type="text " [(ngModel)]="inputGrade" />
+  <button (click)="sendGradeHandler()">math</button>
 </div>
