--- a/src/app/parent/parent/parent.component.html
+++ b/src/app/parent/parent/parent.component.html
@@ -1,4 +1,5 @@
 <div>
   <inst-child (sendGradeEvent)="getGrade($event)"></inst-child>
-  <h2>{{ math }}</h2>
+  <div>{{ grades | json }}</div>
+  <!--  <h2>{{ math }}</h2>-->
 </div>
