add: 09.2 NgFor сложная структура данных

--- a/src/app/parent/parent/parent.component.html
+++ b/src/app/parent/parent/parent.component.html
@@ -1,5 +1,17 @@
 <div>
   <inst-child (sendGradeEvent)="getGrade($event)"></inst-child>
   <br />
-  <div *ngFor="let el of grades; index as i">{{ el }} - {{ i }}</div>
+  <!--  <div *ngFor="let el of grades; index as i">{{ el }} - {{ i }}</div>-->
+
+  <div *ngFor="let lessons of lessons">
+    <div>
+      <h3>{{ lessons.title }}</h3>
+      <h4>
+        weekGrades
+        <div *ngFor="let grade of lessons.weekGrades">
+          {{ grade.gradeItem }}
+        </div>
+      </h4>
+    </div>
+  </div>
 </div>
