--- a/src/app/parent/parent/parent.component.html
+++ b/src/app/parent/parent/parent.component.html
@@ -1,17 +1,18 @@
-<div>
-  <inst-child (sendGradeEvent)="getGrade($event)"></inst-child>
-  <br />
-  <!--  <div *ngFor="let el of grades; index as i">{{ el }} - {{ i }}</div>-->
-
-  <div *ngFor="let lessons of lessons">
-    <div>
-      <h3>{{ lessons.title }}</h3>
-      <h4>
-        weekGrades
-        <div *ngFor="let grade of lessons.weekGrades">
-          {{ grade.gradeItem }}
-        </div>
-      </h4>
+<div *ngIf="isLoading; else elseBlock">
+  <h1>Loading...</h1>
+</div>
+<ng-template #elseBlock>
+  <div>
+    <div *ngFor="let lessons of lessons">
+      <div>
+        <h3>{{ lessons.title }}</h3>
+        <h4>
+          weekGrades
+          <div *ngFor="let grade of lessons.weekGrades">
+            {{ grade.gradeItem }}
+          </div>
+        </h4>
+      </div>
     </div>
   </div>
-</div>
+</ng-template>
